--- a/app/build.gradle
+++ b/app/build.gradle
@@ -23,6 +23,13 @@ android {
         sourceCompatibility JavaVersion.VERSION_1_8
         targetCompatibility JavaVersion.VERSION_1_8
     }
+
+    productFlavors {
+        prod {
+            buildConfigField 'String', 'REST_URL', '"***REMOVED***"'
+        }
+    }
+
 }
 
 dependencies {
@@ -36,6 +43,7 @@ dependencies {
 
     //General dependencies
     compile 'com.jakewharton:butterknife:8.4.0'
+    compile "com.google.guava:guava:18.0"
 
     // RxJava
     compile 'io.reactivex:rxjava:1.1.0'
@@ -44,6 +52,7 @@ dependencies {
     //Retrofit
     compile 'com.squareup.retrofit2:retrofit:2.1.0'
     compile 'com.squareup.retrofit2:converter-gson:2.1.0'
+    compile 'com.squareup.retrofit2:adapter-rxjava:2.0.2'
 
     // Mockito
     testCompile 'org.mockito:mockito-core:1.10.19'
