--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         <activity
             android:name=".modules.general.MainActivity"
             android:label="@string/app_name"
-            android:theme="@style/AppTheme.NoActionBar"></activity>
+            android:theme="@style/AppTheme.NoActionBar.NoStatus"></activity>
         <activity
             android:name=".modules.auth.LoginActivity"
             android:label="@string/title_activity_login"
