--- a/app/build.gradle
+++ b/app/build.gradle
@@ -48,6 +48,7 @@ dependencies {
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.4.0'
     compile "com.google.guava:guava:18.0"
     compile 'com.github.lzyzsd:circleprogress:1.1.0@aar'
+    compile 'com.github.bumptech.glide:glide:3.7.0'
 
     // RxJava
     compile 'io.reactivex:rxjava:1.1.0'
