--- a/app/build.gradle
+++ b/app/build.gradle
@@ -49,6 +49,7 @@ dependencies {
     compile "com.google.guava:guava:18.0"
     compile 'com.github.lzyzsd:circleprogress:1.1.0@aar'
     compile 'com.github.bumptech.glide:glide:3.7.0'
+    compile 'com.roughike:bottom-bar:2.0.2'
 
     // RxJava
     compile 'io.reactivex:rxjava:1.1.0'
