--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,10 +50,12 @@ dependencies {
     compile 'com.github.lzyzsd:circleprogress:1.1.0@aar'
     compile 'com.github.bumptech.glide:glide:3.7.0'
     compile 'com.roughike:bottom-bar:2.0.2'
+    compile 'cn.pedant.sweetalert:library:1.3'
 
     // RxJava
     compile 'io.reactivex:rxjava:1.1.0'
     compile 'io.reactivex:rxandroid:1.1.0'
+    compile 'com.jakewharton.rxbinding:rxbinding:0.4.0'
 
 
     //Retrofit
