--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.brunoaybar.unofficalupc">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -9,10 +10,10 @@
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:supportsRtl="true"
-        android:theme="@style/AppTheme.NoActionBar">
+        android:theme="@style/AppTheme.NoActionBar"
+        tools:replace="android:icon">
         <activity
             android:name=".modules.general.MainActivity"
-            android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar.NoStatus" />
         <activity
             android:name=".modules.auth.LoginActivity"
@@ -23,11 +24,12 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity
-            android:name=".modules.courses.CourseDetailActivity" />
+        <activity android:name=".modules.courses.CourseDetailActivity" />
         <activity
             android:name=".modules.classmates.ClassmatesActivity"
-            android:label="@string/title_classmates"/>
+            android:label="@string/title_classmates" />
+        <activity android:name=".modules.courses.calculate.CalculateActivity"
+            android:label="@string/action_calculate"/>
     </application>
 
 </manifest>
