--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,7 +50,7 @@ android {
         demo {
             buildConfigField 'String', 'REST_URL', '"https://wwww.demo.test"' //demo url
             buildConfigField 'String', 'AMPLITUDE_SDK', '"6c4e9c09fbb393b193cab2d42cf31f4f"' //demo key
-            manifestPlaceholders = [fabric_io_id: "test"] //demo key
+            manifestPlaceholders = [fabric_io_id: "fc00164b9970d08b4fd172c31f9bc0f8f67b2744"] //demo key
             resValue "string", "facebook_app_id", "1898631080421022" //demo key
         }
 
